Fixed retrieving game details logic
