# app/Http/Controllers/Game/GameDetailsController.php
@@ -19,40 +19,69 @@ use Illuminate\Http\JsonResponse;
  * @OA\Parameter(
  *      name="gameId",
  *      in="path",
- *      description="Game's ID",
+ *      description="Game's appId",
  *      required=true,
- *      example="167613",
+ *      example="21000",
  * ),
  * @OA\Response(
  *      response=200,
  *      description="OK",
  *      @OA\JsonContent(
+ *          @OA\Property(property="type", type="string", example="game"),
+ *          @OA\Property(property="name", type="string", example="LEGO® Batman™: The Videogame"),
+ *          @OA\Property(property="steam_appid", type="int", example="21000"),
+ *          @OA\Property(property="controller_support", type="string", example="full"),
+ *          @OA\Property(property="detailed_description", type="string", example="When all the villains in Arkham Asylum team up and break loose, only the dynamic duo is bold enough to take them on to save Gotham City. The fun of LEGO, the drama of Batman and the uniqueness of the combination makes for a comical and exciting adventure in LEGO Batman: The Videogame. Play as Batman and his sidekick Robin as you build, drive, swing and fight your way through Gotham City capturing escaped villains including The Joker, Penguin, Scarecrow and more. Then, jump into the story from the other side and play as Batmans foes! Enjoy the power you wield and battle Batman while spreading chaos throughout the city. There is no rest for the good (or evil!)."),
+ *          @OA\Property(property="about_the_game", type="string", example="When all the villains in Arkham Asylum team up and break loose, only the dynamic duo is bold enough to take them on to save Gotham City. The fun of LEGO, the drama of Batman and the uniqueness of the combination makes for a comical and exciting adventure in LEGO Batman: The Videogame. Play as Batman and his sidekick Robin as you build, drive, swing and fight your way through Gotham City capturing escaped villains including The Joker, Penguin, Scarecrow and more. Then, jump into the story from the other side and play as Batmans foes! Enjoy the power you wield and battle Batman while spreading chaos throughout the city. There is no rest for the good (or evil!)."),
+ *          @OA\Property(property="short_description", type="string", example="When all the villains in Arkham Asylum team up and break loose, only the dynamic duo is bold enough to take them on to save Gotham City. The fun of LEGO, the drama of Batman and the uniqueness of the combination makes for a comical and exciting adventure in LEGO Batman: The Videogame."),
+ *          @OA\Property(property="supported_languages", type="string", example="English, French, Spanish - Spain"),
+ *          @OA\Property(property="header_image", type="string", example="https://cdn.akamai.steamstatic.com/steam/apps/21000/header.jpg?t=1573509038"),
+ *
  *          @OA\Property(
- *              property="info",
+ *              property="developers",
  *              type="array",
- *              @OA\Items(
- *                  @OA\Property(property="title", type="string", example="LEGO Batman"),
- *                  @OA\Property(property="steamAppID", type="string", example="21000"),
- *                  @OA\Property(property="thumb", type="string", example="https://originassets.akamaized.net/origin-com-store-final-assets-prod/195763/142.0x200.0/1040463_MB_142x200_en_US_^_2017-09-08-15-21-36_d7034d41216b6dc201fb20e0cee37c1e66190a11.jpg"),
- *              ),
+ *              @OA\Items(type="string", example="Traveller's Tales"),
  *          ),
+ *
  *          @OA\Property(
- *              property="cheapestPriceEver",
+ *              property="publishers",
  *              type="array",
- *              @OA\Items(
- *                  @OA\Property(property="price", type="string", example="3.99"),
- *                  @OA\Property(property="date", type="date:unix_timestamp", example="1543028665"),
- *              ),
+ *              @OA\Items(type="string", example="Warner Bros. Interactive Entertainment"),
  *          ),
+ *
  *          @OA\Property(
- *              property="deals",
+ *              property="price_overview",
+ *              @OA\Property(property="currency", type="string", example="USD"),
+ *              @OA\Property(property="initial", type="int", example="1999"),
+ *              @OA\Property(property="final", type="int", example="1999"),
+ *              @OA\Property(property="discount_percent", type="int", example="0"),
+ *              @OA\Property(property="initial_formatted", type="string", example=""),
+ *              @OA\Property(property="final_formatted", type="string", example="$19.99 USD"),
+ *          ),
+ *
+ *          @OA\Property(
+ *              property="platforms",
+ *              @OA\Property(property="windows", type="bool", example="true"),
+ *              @OA\Property(property="mac", type="bool", example="false"),
+ *              @OA\Property(property="linux", type="bool", example="false"),
+ *          ),
+ *
+ *          @OA\Property(
+ *              property="release_date",
+ *              @OA\Property(property="coming_soon", type="bool", example="false"),
+ *              @OA\Property(property="date", type="date", example="29 Sep, 2008"),
+ *          ),
+ *
+ *          @OA\Property(property="background", type="string", example="https://cdn.akamai.steamstatic.com/steam/apps/21000/page_bg_generated_v6b.jpg?t=1573509038"),
+ *
+ *          @OA\Property(
+ *              property="screenshots",
  *              type="array",
  *              @OA\Items(
- *                  @OA\Property(property="storeID", type="string", example="23"),
- *                  @OA\Property(property="dealID", type="string", example="tyTH88J0PXRvYALBjV3cNHd5Juq1qKcu4tG4lBiUCt4%3D"),
- *                  @OA\Property(property="price", type="string", example="14.95"),
- *                  @OA\Property(property="retailPrice", type="string", example="19.99"),
- *                  @OA\Property(property="savings", type="string", example="25.212606"),
+ *                   @OA\Property(property="id", type="int", example="0"),
+ *                   @OA\Property(property="path_thumbnail", type="string", example="https://cdn.akamai.steamstatic.com/steam/apps/21000/0000005467.600x338.jpg?t=1573509038"),
+ *                   @OA\Property(property="path_full", type="string", example="https://cdn.akamai.steamstatic.com/steam/apps/21000/0000005467.1920x1080.jpg?t=1573509038"),
+ *                  ),
  *              ),
  *          ),
  *      ),
@@ -60,10 +89,10 @@ use Illuminate\Http\JsonResponse;
  */
 class GameDetailsController extends Controller
 {
-    public function __invoke(ShowGameService $service, int $gameId): JsonResponse
+    public function __invoke(ShowGameService $service, int $appId): JsonResponse
     {
-        $result = $service->get($gameId);
+        $gameDetails = $service->get($appId);
 
-        return new JsonResponse($result);
+        return new JsonResponse($gameDetails);
     }
 }
