# storage/api-docs/api-docs.json
@@ -412,9 +412,9 @@
                     {
                         "name": "gameId",
                         "in": "path",
-                        "description": "Game's ID",
+                        "description": "Game's appId",
                         "required": true,
-                        "example": "167613"
+                        "example": "21000"
                     }
                 ],
                 "responses": {
@@ -424,65 +424,135 @@
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "info": {
+                                        "type": {
+                                            "type": "string",
+                                            "example": "game"
+                                        },
+                                        "name": {
+                                            "type": "string",
+                                            "example": "LEGO® Batman™: The Videogame"
+                                        },
+                                        "steam_appid": {
+                                            "type": "integer",
+                                            "example": "21000"
+                                        },
+                                        "controller_support": {
+                                            "type": "string",
+                                            "example": "full"
+                                        },
+                                        "detailed_description": {
+                                            "type": "string",
+                                            "example": "When all the villains in Arkham Asylum team up and break loose, only the dynamic duo is bold enough to take them on to save Gotham City. The fun of LEGO, the drama of Batman and the uniqueness of the combination makes for a comical and exciting adventure in LEGO Batman: The Videogame. Play as Batman and his sidekick Robin as you build, drive, swing and fight your way through Gotham City capturing escaped villains including The Joker, Penguin, Scarecrow and more. Then, jump into the story from the other side and play as Batmans foes! Enjoy the power you wield and battle Batman while spreading chaos throughout the city. There is no rest for the good (or evil!)."
+                                        },
+                                        "about_the_game": {
+                                            "type": "string",
+                                            "example": "When all the villains in Arkham Asylum team up and break loose, only the dynamic duo is bold enough to take them on to save Gotham City. The fun of LEGO, the drama of Batman and the uniqueness of the combination makes for a comical and exciting adventure in LEGO Batman: The Videogame. Play as Batman and his sidekick Robin as you build, drive, swing and fight your way through Gotham City capturing escaped villains including The Joker, Penguin, Scarecrow and more. Then, jump into the story from the other side and play as Batmans foes! Enjoy the power you wield and battle Batman while spreading chaos throughout the city. There is no rest for the good (or evil!)."
+                                        },
+                                        "short_description": {
+                                            "type": "string",
+                                            "example": "When all the villains in Arkham Asylum team up and break loose, only the dynamic duo is bold enough to take them on to save Gotham City. The fun of LEGO, the drama of Batman and the uniqueness of the combination makes for a comical and exciting adventure in LEGO Batman: The Videogame."
+                                        },
+                                        "supported_languages": {
+                                            "type": "string",
+                                            "example": "English, French, Spanish - Spain"
+                                        },
+                                        "header_image": {
+                                            "type": "string",
+                                            "example": "https://cdn.akamai.steamstatic.com/steam/apps/21000/header.jpg?t=1573509038"
+                                        },
+                                        "developers": {
                                             "type": "array",
                                             "items": {
-                                                "properties": {
-                                                    "title": {
-                                                        "type": "string",
-                                                        "example": "LEGO Batman"
-                                                    },
-                                                    "steamAppID": {
-                                                        "type": "string",
-                                                        "example": "21000"
-                                                    },
-                                                    "thumb": {
-                                                        "type": "string",
-                                                        "example": "https://originassets.akamaized.net/origin-com-store-final-assets-prod/195763/142.0x200.0/1040463_MB_142x200_en_US_^_2017-09-08-15-21-36_d7034d41216b6dc201fb20e0cee37c1e66190a11.jpg"
-                                                    }
-                                                },
-                                                "type": "object"
+                                                "type": "string",
+                                                "example": "Traveller's Tales"
                                             }
                                         },
-                                        "cheapestPriceEver": {
+                                        "publishers": {
                                             "type": "array",
                                             "items": {
-                                                "properties": {
-                                                    "price": {
-                                                        "type": "string",
-                                                        "example": "3.99"
-                                                    },
-                                                    "date": {
-                                                        "type": "date:unix_timestamp",
-                                                        "example": "1543028665"
-                                                    }
-                                                },
-                                                "type": "object"
+                                                "type": "string",
+                                                "example": "Warner Bros. Interactive Entertainment"
                                             }
                                         },
-                                        "deals": {
+                                        "price_overview": {
+                                            "properties": {
+                                                "currency": {
+                                                    "type": "string",
+                                                    "example": "USD"
+                                                },
+                                                "initial": {
+                                                    "type": "integer",
+                                                    "example": "1999"
+                                                },
+                                                "final": {
+                                                    "type": "integer",
+                                                    "example": "1999"
+                                                },
+                                                "discount_percent": {
+                                                    "type": "integer",
+                                                    "example": "0"
+                                                },
+                                                "initial_formatted": {
+                                                    "type": "string",
+                                                    "example": ""
+                                                },
+                                                "final_formatted": {
+                                                    "type": "string",
+                                                    "example": "$19.99 USD"
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "platforms": {
+                                            "properties": {
+                                                "windows": {
+                                                    "type": "boolean",
+                                                    "example": "true"
+                                                },
+                                                "mac": {
+                                                    "type": "boolean",
+                                                    "example": "false"
+                                                },
+                                                "linux": {
+                                                    "type": "boolean",
+                                                    "example": "false"
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "release_date": {
+                                            "properties": {
+                                                "coming_soon": {
+                                                    "type": "boolean",
+                                                    "example": "false"
+                                                },
+                                                "date": {
+                                                    "type": "string",
+                                                    "format": "date",
+                                                    "example": "29 Sep, 2008"
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "background": {
+                                            "type": "string",
+                                            "example": "https://cdn.akamai.steamstatic.com/steam/apps/21000/page_bg_generated_v6b.jpg?t=1573509038"
+                                        },
+                                        "screenshots": {
                                             "type": "array",
                                             "items": {
                                                 "properties": {
-                                                    "storeID": {
-                                                        "type": "string",
-                                                        "example": "23"
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": "0"
                                                     },
-                                                    "dealID": {
+                                                    "path_thumbnail": {
                                                         "type": "string",
-                                                        "example": "tyTH88J0PXRvYALBjV3cNHd5Juq1qKcu4tG4lBiUCt4%3D"
+                                                        "example": "https://cdn.akamai.steamstatic.com/steam/apps/21000/0000005467.600x338.jpg?t=1573509038"
                                                     },
-                                                    "price": {
+                                                    "path_full": {
                                                         "type": "string",
-                                                        "example": "14.95"
-                                                    },
-                                                    "retailPrice": {
-                                                        "type": "string",
-                                                        "example": "19.99"
-                                                    },
-                                                    "savings": {
-                                                        "type": "string",
-                                                        "example": "25.212606"
+                                                        "example": "https://cdn.akamai.steamstatic.com/steam/apps/21000/0000005467.1920x1080.jpg?t=1573509038"
                                                     }
                                                 },
                                                 "type": "object"
